--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         <p class="mt-10 text-green-700 text-xl font-semibold" id="result"></p>
     </main>
     <footer class="flex items-center justify-center gap-x-6 py-8">
-        <a class="h-8 w-8" href="https://github.com/neogcamp/" target="_blank">
+        <a class="h-8 w-8" href="https://github.com/crater90/" target="_blank">
             <img src="github.png" alt="github" />
         </a>
-        <a class="h-8 w-8" href="https://bit.ly/tanaydiscord" target="_blank">
+        <a class="h-8 w-8" href="https://www.linkedin.com/in/mohdkamran07/" target="_blank">
             <img src="linkedin.png" alt="linkedin" />
         </a>
-        <a class="h-8 w-8" href="https://twitter.com/neogcamp" target="_blank">
+        <a class="h-8 w-8" href="https://twitter.com/crater90" target="_blank">
             <img src="twitter.png" alt="twitter" />
         </a>
-        <a class="h-8 w-8" href="https://www.instagram.com/neogcamp" target="_blank">
+        <a class="h-8 w-8" href="" target="_blank">
             <img src="web.png" alt="website" />
         </a>
     </footer>
